[gd_scene load_steps=14 format=3 uid="uid://dc4vv8rovijoo"]

[ext_resource type="Script" path="res://Scripts/level.gd" id="1_obd3i"]
[ext_resource type="Texture2D" uid="uid://d0hv7o7586tsn" path="res://assets/bg.png" id="2_ka5qw"]
[ext_resource type="PackedScene" uid="uid://i62xilvdkady" path="res://Entities/paddle.tscn" id="3_cxs55"]
[ext_resource type="PackedScene" uid="uid://cnnh2rkwjoubf" path="res://Entities/ball.tscn" id="4_366r0"]
[ext_resource type="Texture2D" uid="uid://c5qhwv4hg1f6a" path="res://assets/StartButton.png" id="5_myx1s"]
[ext_resource type="Texture2D" uid="uid://b47kpr8r2ewp2" path="res://assets/StartButtonClick.png" id="6_0afqm"]
[ext_resource type="Texture2D" uid="uid://dea2vjwd3urln" path="res://assets/StartButtonHover.png" id="7_coxih"]
[ext_resource type="FontFile" uid="uid://ck0ku07p3wkda" path="res://Early GameBoy.ttf" id="8_njp61"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fho07"]
size = Vector2(8, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y36xs"]
size = Vector2(8, 144)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nuwpg"]
size = Vector2(8, 144)

[sub_resource type="InputEventKey" id="InputEventKey_gnnru"]
device = -1
keycode = 32
unicode = 32

[sub_resource type="Shortcut" id="Shortcut_ax82b"]
events = [SubResource("InputEventKey_gnnru")]

[node name="Level2" type="Node2D"]
script = ExtResource("1_obd3i")

[node name="BackgroundSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_ka5qw")
offset = Vector2(80, 72)

[node name="Paddle" parent="." instance=ExtResource("3_cxs55")]
position = Vector2(8, 72)
player = "One"

[node name="Paddle2" parent="." instance=ExtResource("3_cxs55")]
position = Vector2(152, 72)
player = "Two"

[node name="Ball" parent="." instance=ExtResource("4_366r0")]
position = Vector2(80, 71)

[node name="Ceiling" type="StaticBody2D" parent="."]
position = Vector2(159, 67)

[node name="CeilingBounds" type="CollisionShape2D" parent="Ceiling"]
position = Vector2(-79, -71)
rotation = 1.5708
shape = SubResource("RectangleShape2D_fho07")

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(159, 67)

[node name="FloorBounds" type="CollisionShape2D" parent="Floor"]
position = Vector2(-79, 81)
rotation = 1.5708
shape = SubResource("RectangleShape2D_fho07")

[node name="Player1ScoreBox" type="StaticBody2D" parent="."]
position = Vector2(159, 67)

[node name="ScoreBox" type="CollisionShape2D" parent="Player1ScoreBox"]
position = Vector2(-163, 5)
shape = SubResource("RectangleShape2D_y36xs")

[node name="Player2ScoreBox" type="StaticBody2D" parent="."]
position = Vector2(159, 67)

[node name="ScoreBox" type="CollisionShape2D" parent="Player2ScoreBox"]
position = Vector2(5, 4)
shape = SubResource("RectangleShape2D_nuwpg")

[node name="StartButton" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="StartButton"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="TextureButton" parent="StartButton/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.5
offset_top = -13.0
offset_right = 25.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
shortcut = SubResource("Shortcut_ax82b")
texture_normal = ExtResource("5_myx1s")
texture_pressed = ExtResource("6_0afqm")
texture_hover = ExtResource("7_coxih")

[node name="P1Score" type="Label" parent="StartButton/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.5
anchor_right = 0.2
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 24.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.545098, 0.67451, 0.0588235, 1)
theme_override_fonts/font = ExtResource("8_njp61")
text = "10
"

[node name="P2Score" type="Label" parent="StartButton/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8
anchor_top = 0.5
anchor_right = 0.8
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 15.0
theme_override_colors/font_color = Color(0.545098, 0.67451, 0.0588235, 1)
theme_override_fonts/font = ExtResource("8_njp61")
text = "10"

[node name="GameOverLabel" type="Label" parent="StartButton/Control"]
visible = false
layout_mode = 0
offset_top = 40.0
offset_right = 168.0
offset_bottom = 106.0
theme_override_colors/font_color = Color(0.545098, 0.67451, 0.0588235, 1)
theme_override_fonts/font = ExtResource("8_njp61")
text = "PLAYER 
X 
WINS"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="button_up" from="StartButton/Control/StartButton" to="." method="_on_start_button_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
